# grpc-cpp-cmake

./: .dockerignore  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
app/: CMakeLists.txt  client.cpp  clientgrpc.cpp  clientrest.cpp  greeter_client.cc  greeter_server.cc
cmake/: grpc.cmake
protos/: helloworld.proto  mathtest.proto
tfsimagenet/: Dockerfile  README.md  deployment.yml  docker-compose.yml
